test/spec_vectors/simd_load_extend/fail/module_7.wat
(module (memory 0) (func $v128.load8x8_s-arg-empty (result v128) (v128.load8x8_s)))